--- a/blog/secondpost/index.mdx
+++ b/blog/secondpost/index.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Another Post"
 date: "2021-07-24"
+hero_image: "image.jpg"
+hero_image_alt: "Beach"
+
 ---
 
 Here's another post! It's even better than the first one!
